# multi-agent-mass-recruitment-hub

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
docs/: AI_AGENT_AND_ML_PIPELINE.md  API_AND_USER_INTERFACE_SPECIFICATION.md  ARCHITECTURE_AND_DATA_MODEL.md  DEPLOYMENT_OBSERVABILITY_AND_ADMIN_GUIDE.md  DEVELOPER_ONBOARDING_AND_CODE_REFERENCE.md  QUALITY_ASSURANCE_AND_TESTING_STRATEGY.md  SECURITY_COMPLIANCE_AND_PRIVACY_GUIDE.md  SYSTEM_SPECIFICATION_AND_PRODUCT_GUIDE.md  VOICE_AND_TELEPHONY_PIPELINE.md
evals/: __init__.py  evaluation-strategy.md  test_hallucination.py
infra/db/migrations/: 001_create_fairness_reports.sql
infra/docker/freeswitch/conf/autoload_configs/: event_socket.conf.xml
infra/docker/freeswitch/scripts/: hello.lua
infra/elk/: logstash.conf
infra/filebeat/: filebeat.yml
infra/grafana/: dashboard-mass-recruit-hub.json
infra/helm/mass-recruit-hub/: Chart.yaml  values-prod.yaml  values.yaml
infra/helm/mass-recruit-hub/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  grafana-dashboard-configmap.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
infra/livekit/: livekit.yaml
infra/prometheus/: alerts.yaml  prometheus.yml
infra/terraform/: main.tf
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_model_weights.py  003_add_users.py  004_add_biometry_consent_log.py
scripts/: deploy-prod.sh  download_whisper_model.py  run_vllm_server.py  test_tts.py
src/: __init__.py  celery_app.py  celery_metrics.py  main.py
src/agents/: __init__.py  orchestrator.py
src/agents/analyst/: __init__.py  fairness_metrics.py  graph.py  nodes.py
src/agents/coordinator/: __init__.py  graph.py  nodes.py
src/agents/interviewer/: __init__.py  face_utils.py  graph.py  nodes.py  prompts.py  prosody.py  video_analyzer.py
src/agents/onboarding/: __init__.py  graph.py  nodes.py
src/agents/screener/: __init__.py  graph.py  nodes.py
src/api/: __init__.py  admin.py  auth.py  campaigns.py  candidates.py  deletion.py  deps.py  messenger_webhook.py  rpa_webhook.py  telegram_webhook.py
src/bot/: telegram.py
src/core/: audit_logger.py  config.py  database.py  logging_config.py  metrics.py  models.py  state.py
src/integrations/: __init__.py  job_boards.py
src/llm/: __init__.py  vllm_client.py
src/optimization/: __init__.py  bandit.py  bandit_service.py
src/pii/: __init__.py  anonymizer.py  recognizers.py
src/services/: agent_runner.py  audio_converter.py  biometry_consent.py  calendar_service.py  campaign_service.py  deletion_service.py  handoff_service.py  hr_integrations.py  import_resumes.py  model_weights_service.py  propensity_dialer.py  qdrant_storage.py  rpa_client.py  semantic_cache.py
src/static/: index.html
src/tasks/: __init__.py  campaign_tasks.py  import_tasks.py
src/telephony/: __init__.py  esl_client.py  freeswitch_client.py
src/voice/: __init__.py  asr.py  livekit_client.py  pipeline.py  tts.py
tests/: __init__.py  test_coordinator_graph.py  test_interviewer_graph.py  test_screener_graph.py
tests/integration/: test_analyst_e2e.py  test_coordinator_e2e.py  test_interviewer_e2e.py  test_onboarding_e2e.py  test_screener_e2e.py
tests/unit/: test_semantic_cache.py
